--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <!-- это враппер в нем будет находиться контент -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam perspiciatis quasi harum? Officia provident
+        tenetur dolorum repudiandae totam? Asperiores, omnis!</p>
     <div class="wrapper">
-<br>
+        <br>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-        <!-- это привязка к js -->
     <script src="./script.js"></script>
 </body>
 
