--- a/index.html
+++ b/index.html
@@ -6,20 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/icon-of web">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>SegWay</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <br>
-    </div>
+    <header class="header">
+        <div class="div-back-nav">
+            <nav class="navbar navbar-expand-lg navbar-light nav-bar-wrapper">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">REVIEWS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">SHIPPING AND PAYMENT</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">WHOLESALE</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">BLOG</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">CONTACTS</a>
+                            </li>
+                            <form class="d-flex">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#"><img src="./images/Корзина.png" alt=""></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#"><img src="./images/instagram.png" alt=""></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#">+1 (888) 888-88-88</a>
+                                </li>
+                            </form>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <section>
+
+        </section>
+    </main>
+    <footer class="footer">
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
