--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./img/icon-of web">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>SegWay</title>
@@ -14,55 +13,140 @@
 
 <body>
     <header class="header">
-        <div class="div-back-nav">
-            <nav class="navbar navbar-expand-lg navbar-light nav-bar-wrapper">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">REVIEWS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">SHIPPING AND PAYMENT</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">WHOLESALE</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">BLOG</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">CONTACTS</a>
-                            </li>
-                            <form class="d-flex">
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#"><img src="./images/Корзина.png" alt=""></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#"><img src="./images/instagram.png" alt=""></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">+1 (888) 888-88-88</a>
-                                </li>
-                            </form>
-                    </div>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="div-img-logo-flex">
+                    <a class="text-decor-none" href="#"><img class="img-logo-nav" src="./images/segway-logo.png"
+                            alt=""></a>
                 </div>
-            </nav>
-        </div>
+                <form class="d-flex">
+                    <li class="nav-item li-left">
+                        <a class="nav-link active" href="#"><img class="img-white-none-adapt" src="./images/Корзина.png"
+                                alt=""><img class="img-black-nav img-black-bordr img-black-nav1"
+                                src="./images/korzine-black.png" alt=""></a>
+                    </li>
+                    <li class="nav-item nav-item-img-2">
+                        <a class="nav-link active" href="#"><img class="img-white-none-adapt"
+                                src="./images/instagram.png" alt=""><img
+                                class="img-black-nav img-black-bordr img-black-nav2" src="./images/inst-black.png"
+                                alt=""></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active a-num-none" href="#">+1 (888) 888-88-88</a>
+                        <img class="phone-black img-black-bordr img-black-nav3" src="./images/phone-black.png " alt="">
+                    </li>
+                </form>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item nav-link-ul">
+                            <a class="nav-link active " href="#">REVIEWS</a>
+                        </li>
+                        <li class="nav-item nav-link-ul">
+                            <a class="nav-link active" href="#">SHIPPING AND PAYMENT</a>
+                        </li>
+                        <li class="nav-item nav-link-ul">
+                            <a class="nav-link active" href="#">WHOLESALE</a>
+                        </li>
+                        <li class="nav-item nav-link-ul">
+                            <a class="nav-link active" href="#">BLOG</a>
+                        </li>
+                        <li class="nav-item nav-link-ul">
+                            <a class="nav-link active" href="#">CONTACTS</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main class="main">
         <section>
-
+            <div class="section-2 wrapper">
+                <div class="div-ali-center">
+                    <img class="sec-2-logo" src="./images/segway-logo.png" alt="">
+                </div>
+                <div class="human-inf-div">
+                    <img class="img-human" src="./images/human.png" alt="">
+                    <div class="div-info">
+                        <p class="name-human">jOHN SMITH</p>
+                        <p class="p-tipo-a">Ask a question</p>
+                        <p class="p-tipo-a">to the director</p>
+                    </div>
+                </div>
+            </div>
+            <div class="section-3">
+                <div class="wrapper">
+                    <div class="flex-1-div-sec-3">
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-1.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-2.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-3.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-4.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-5.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-6.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samolat-7.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-11.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-22.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-33.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-44.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-55.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat" src="./images/samokat-66.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                        <div class="div-samokat">
+                            <img class="img-samokat img-hat" src="./images/samokat-77.png" alt="">
+                            <p class="p-samokat">KS E22</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="back-blue">Free 1 day shipping within California.</div>
         </section>
     </main>
     <footer class="footer">
 
     </footer>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
