all 3 sec adapt done

--- a/index.html
+++ b/index.html
@@ -87,55 +87,55 @@
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-2.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS ES1l</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-3.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS Air t15</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-4.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS F30</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-5.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS E45</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-6.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS MAX</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samolat-7.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS MAX</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-11.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS ES2</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-22.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS ES 3</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-33.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">EKS ZING E8</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-44.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">EKS ZING E10</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-55.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">EKS ZING E12</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat" src="./images/samokat-66.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">KS ES 4</p>
                         </div>
                         <div class="div-samokat">
                             <img class="img-samokat img-hat" src="./images/samokat-77.png" alt="">
-                            <p class="p-samokat">KS E22</p>
+                            <p class="p-samokat">Accessories</p>
                         </div>
                     </div>
                 </div>
@@ -143,6 +143,7 @@
             <div class="back-blue">Free 1 day shipping within California.</div>
         </section>
     </main>
+
     <footer class="footer">
 
     </footer>
